feat: implement get following list and refactor mock generation
